index.ejs * Se añadio nuevo contribuidor

--- a/maintenance/views/index.ejs
+++ b/maintenance/views/index.ejs
@@ -178,6 +178,16 @@
                                 <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@AssDevCl</span>
                         </a>
                     </div>
+
+                    <!-- Contribuidor 7 -->
+                    <div class="group">
+                        <a href="https://github.com/Edgajuman" target="_blank" class="flex flex-col items-center">
+                            <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-custom-red group-hover:border-red-400 transition-all duration-300">
+                                <img src="https://avatars.githubusercontent.com/u/135595629?v=4" alt="Edgajuman" class="w-full h-full object-cover">
+                                </div>
+                                <span class="mt-2 text-sm font-medium text-gray-300 group-hover:text-custom-red transition-colors duration-300">@Edgajuman</span>
+                        </a>
+                    </div>
                 </div>
             </div>
 
